Add synchronized Object lock sample from Tatiana Fesenko course