@@ -1,4 +1,7 @@
+import java.util.Objects;
 import java.util.Random;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 public class HackersAndPolice2 {
     private static final int MAX_PASSWORD = 9999;
@@ -11,16 +14,27 @@ public class HackersAndPolice2 {
         Runnable ascTask = getAscendingHackerTask(vault);
         Runnable police = getPoliceTask();
 
-        // Pass tasks to each thread to execute
-        Thread.ofPlatform().name("Asc").priority(Thread.MAX_PRIORITY).start(ascTask);
-        Thread.ofPlatform().name("Desc").priority(Thread.MAX_PRIORITY).start(descTask);
-        Thread.ofPlatform().name("Police").priority(Thread.MAX_PRIORITY).start(police);
+        //// Pass tasks to each thread to execute
+        //Thread.ofPlatform().name("AscHacker").priority(Thread.MAX_PRIORITY).start(ascTask);
+        //Thread.ofPlatform().name("DescHacker").priority(Thread.MAX_PRIORITY).start(descTask);
+        //Thread.ofPlatform().name("Police").priority(Thread.MAX_PRIORITY).start(police);
+
+        // Using thread pool
+        ExecutorService executorService = Executors.newFixedThreadPool(3);
+        executorService.submit(descTask);
+        executorService.submit(ascTask);
+        executorService.submit(police);
     }
 
     private static Runnable getPoliceTask() {
         Runnable police = new Runnable() {
             @Override
             public void run() {
+                // Setting name - useful for traceability
+                if (!Thread.currentThread().getName().equals("Police")) {
+                    Thread.currentThread().setName("Police");
+                }
+
                 try {
                     System.out.println(Thread.currentThread().getName() + ": starting...");
                     for (int i = 10; i > 0; i--) {
@@ -30,7 +44,6 @@ public class HackersAndPolice2 {
                     System.out.println(Thread.currentThread().getName() + ": Got you hackers!");
                     System.exit(0);
                 } catch (InterruptedException e) {
-                    // TODO Auto-generated catch block
                     e.printStackTrace();
                 }
             }
@@ -42,6 +55,11 @@ public class HackersAndPolice2 {
         Runnable ascTask = new Runnable() {
             @Override
             public void run() {
+                // Setting name - useful for traceability
+                if (!Thread.currentThread().getName().equals("AscHacker")) {
+                    Thread.currentThread().setName("AscHacker");
+                }
+
                 System.out.println(Thread.currentThread().getName() + ": starting...");
                 for (int i = 0; i < MAX_PASSWORD; i++) {
                     if (vault.isCorrectPassword(i)) {
@@ -58,6 +76,11 @@ public class HackersAndPolice2 {
         Runnable descTask = new Runnable() {
             @Override
             public void run() {
+                // Setting name - useful for traceability
+                if (!Thread.currentThread().getName().equals("DescHacker")) {
+                    Thread.currentThread().setName("DescHacker");
+                }
+
                 System.out.println(Thread.currentThread().getName() + ": starting...");
                 for (int i = MAX_PASSWORD; i > 0; i--) {
                     if (vault.isCorrectPassword(i)) {
